--- a/sub_website/templates/sub_website/acceuil/nav_bar.html
+++ b/sub_website/templates/sub_website/acceuil/nav_bar.html
@@ -6,7 +6,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>PurV2</title>
+    <title>Pur Beurre</title>
     <link rel="stylesheet" href="{% static 'sub_website/acceuil/assets/bootstrap/css/bootstrap.min.css'%}">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic">
