changed some link and added legals

--- a/sub_website/templates/sub_website/acceuil/legals.html
+++ b/sub_website/templates/sub_website/acceuil/legals.html
@@ -10,6 +10,9 @@
             <li style="color: black;margin-bottom: 6px;">OpenFoodFact Pour les données des produits</li>
             <li style="color: black;margin-right: 0px;margin-bottom: 6px;">Icon carotte : Carrot by Fabien Jouin from the Noun Project<br /></li>
             <li style="color: black;margin-bottom: 9px;">Creative Boostrap pour le thème CSS</li>
+            <li style="color: black;">Application Héberge sur : Heroku</li>
+            <li style="color: black;">Base de données: PostGresql</li>
+
             <li style="color: black;margin-bottom: 10px;">Copyright Bayard Maniraho </li>
             <li style="color: black;">Tous droit réservés</li>
         </ul>
