--- a/sub_website/templates/sub_website/acceuil/results.html
+++ b/sub_website/templates/sub_website/acceuil/results.html
@@ -13,27 +13,23 @@
             </div>
         </div>
     </header>
-    <section id="product_result" style="background-color: #E8A75D;position: relative;">
-        <div class="container align-items-center">
-            <!-- Start: Animation Cards -->
-            <div class="row d-flex flex-row align-items-center space-rows" id="row_product">
-
-                {% for product in results_db%}
-                    <div class="col" id="{{product.name}}">
-                        <a href="substitut/{{product.codebar}}" style="text-decoration: none;">
-                            <div class="card cards-shadown cards-hover" data-aos="flip-left" data-aos-duration="950">
-                                <div class="card-header" style="background-image: url(&quot;{{product.image}}&quot;); height:400px; background-position:center; background-repeat:no-repeat;"></div>
-                                <div class="card-body">
-                                    <h6>{{product.name}}</h6>
+                <section id="product_result" style="background-color: #E8A75D;position: relative;">
+                    <div class="container text-center">
+                        <div class="row d-flex flex-row space-rows">
+                        {% for product in results_db  %}
+                            <div class="col">
+                            <a href="substitut/{{product.codebar}}" style="text-decoration: none;">
+                                <div class="card cards-shadown cards-hover">
+                                    <div class="card-header" style="height : 400px; background-image: url({{product.image}}); background-repeat:no-repeat; background-cover:cover; background-position:center"></div>
+                                    <div class="card-body">
+                                        <h6>{{product.name}}</h6>
+                                    </div>
                                 </div>
+                            </a>
                             </div>
-                        </a>
-                    </div>
-                {% endfor %}
-            </div>
-            <!-- End: Animation Cards -->
-
-            {% if paginate %}
+{% endfor %}
+                        </div>
+                         {% if paginate %}
             <div class="clearfix"></div>
             <div class="btn-toolbar" style="margin-left: 276px;">
                 {% if results_db.has_previous %}
@@ -46,8 +42,8 @@
                 {% endif %}
             </div>
             {% endif %}
-        </div>
-    </section>
+                    </div>
+                </section>
 {% else %}
 
     <header class="masthead text-center text-white d-flex" style="background-image: url(&quot;{% static 'sub_website/acceuil/assets/img/kawin-harasai-k60JspcBwKE-unsplash.jpg'%}&quot;);">
