--- a/sub_website/templates/sub_website/acceuil/index.html
+++ b/sub_website/templates/sub_website/acceuil/index.html
@@ -55,6 +55,17 @@
                 <div class="col"><img class="border rounded border-dark shadow-lg" src="{% static 'sub_website/acceuil/assets/img/remy.jpg' %}" width="400px"/>
                     <h1 style="font-size: 37px;">Remy</h1>
                 </div>
+                                <div class="col"><img class="border rounded border-dark shadow-lg" src="{% static 'sub_website/acceuil/assets/img/remy.jpg' %}" width="400px"/>
+                    <h1 style="font-size: 37px;">Remy</h1>
+                </div>                <div class="col"><img class="border rounded border-dark shadow-lg" src="{% static 'sub_website/acceuil/assets/img/remy.jpg' %}" width="400px"/>
+                    <h1 style="font-size: 37px;">Remy</h1>
+                </div>                <div class="col"><img class="border rounded border-dark shadow-lg" src="{% static 'sub_website/acceuil/assets/img/remy.jpg' %}" width="400px"/>
+                    <h1 style="font-size: 37px;">Remy</h1>
+                </div>                <div class="col"><img class="border rounded border-dark shadow-lg" src="{% static 'sub_website/acceuil/assets/img/remy.jpg' %}" width="400px"/>
+                    <h1 style="font-size: 37px;">Remy</h1>
+                </div>                <div class="col"><img class="border rounded border-dark shadow-lg" src="{% static 'sub_website/acceuil/assets/img/remy.jpg' %}" width="400px"/>
+                    <h1 style="font-size: 37px;">Remy</h1>
+                </div>
             </div>
 </div>
     </section>
