--- a/sub_website/static/sub_website/acceuil/assets/css/untitled.css
+++ b/sub_website/static/sub_website/acceuil/assets/css/untitled.css
@@ -8,16 +8,88 @@
   flex: 0 0 33.33333%;
   /*position: relative;*/
 }
-@media screen and (max-width: 480px)
-{
-  #row_product{
-    flex-direction: column;
-  }
-  .row.d-flex.flex-row.align-items-center.space-rows
-  {
-    flex-direction: column;
-  }
+.card-header {
+  height: 200px;
+  background-color: orange;
 }
+
+#download-icon {
+  font-size: 30px;
+  color: black;
+  opacity: 0.4;
+}
+
+#heading-card {
+  margin-top: 40px;
+  font-size: 45px;
+}
+
+.cardheader-text {
+  color: #fff;
+}
+
+.card-text.sub-text-color {
+  color: #8c8c8c;
+}
+
+.card-text:last-child {
+  font-size: 30px;
+  color: #595959;
+}
+
+#cardheader-subtext {
+  font-size: 20px;
+}
+
+.card.cards-shadown {
+  box-shadow: 2px 2px 30px #aaaaaa;
+}
+
+.row.space-rows {
+  margin: 40px;
+}
+
+.col {
+  padding: 20px 7px 0px 7px;
+}
+
+.card.cards-shadown.cards-hover:hover {
+  -webkit-transform: scale(1.1);
+  -moz-transform: scale(1.1);
+  -o-transform: scale(1.1);
+  -ms-transform: scale(1.1);
+  transform: scale(1.1);
+  z-index: 99;
+}
+
+.card-header:first-child:hover {
+  background-color: #ffb366;
+}
+
+.row.d-flex.flex-row.space-rows > * {
+  flex: 0 0 33.3333%;
+}
+
+a:hover {
+  color: black;
+}
+
+a, a:hover {
+  color: black;
+}
+
+#logout {
+  height: 20px;
+  width: 20px;
+  display: block;
+}
+
+li {
+  font-weight: bold;
+}
+
+.row.space-rows > * {
+  flex: 0 0 33.33333%;
 }
 .badge.badge-primary {
   position: absolute;
