--- a/sub_website/templates/sub_website/acceuil/results.html
+++ b/sub_website/templates/sub_website/acceuil/results.html
@@ -14,12 +14,13 @@
         </div>
     </header>
 <section id="product_result" style="background-color: #E8A75D;position: relative;">
+<div class="container">
     <div class="row space-rows">
     {% for product in results_db  %}
         <div class="col">
         <a href="substitut/{{product.codebar}}">
             <div class="card cards-shadown cards-hover">
-                <div class="card-header" style="background-image:url({{product.image}}); background-repeat:no-repeat; background-position:center; background-size:contain;"></div>
+                <div class="card-header" style="background-image:url({{product.image}}); background-repeat:no-repeat; background-position:center; background-size:cover;"></div>
                 <div class="card-body">
                     <p class="cardbody-sub-text">{{product.name}}<p>
                 </div>
@@ -28,7 +29,7 @@
         </div>
            {% endfor %}
     </div>
-                             {% if paginate %}
+            {% if paginate %}
             <div class="btn-toolbar" style="margin-left: 276px;">
                 {% if results_db.has_previous %}
                         <a class="btn btn-primary"  href="?page=1" style="background-color: #345A61;margin-right: 21px;">Première page</a>
@@ -40,6 +41,7 @@
                 {% endif %}
             </div>
             {% endif %}
+</div>
 </section>
 
 {% else %}
