--- a/sub_website/templates/sub_website/acceuil/substitut.html
+++ b/sub_website/templates/sub_website/acceuil/substitut.html
@@ -43,7 +43,7 @@
                                     {% endif %}
                             </div>
                             {% endif %}
-
+                </div>
                 {% endfor %}
             </div>
 
