--- a/sub_website/templates/sub_website/acceuil/nav_bar.html
+++ b/sub_website/templates/sub_website/acceuil/nav_bar.html
@@ -16,6 +16,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.min.css">
     <link rel="stylesheet" href="{% static 'sub_website/acceuil/assets/css/untitled.css'%}">
     <link rel="stylesheet" href="{% static 'sub_website/acceuil/assets/css/notyf.min.css' %}">
+    <link rel="shortcut icon" href="{% static 'sub_website/acceuil/assets/img/favicon.ico' %}">
+
 
 </head>
 
