removed repeat on image

--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -26,8 +26,7 @@
         <!-- Start: Form Container -->
         <div data-aos="zoom-in" data-aos-duration="300" class="form-container">
             <!-- Start: Image -->
-            <div class="image-holder" style="background: url(&quot;{% static 'sub_website/acceuil/assets/img/colette-6.jpg'%}&quot;);
-                                            background-repeat:no-repeat;"></div>
+            <div class="image-holder" style="background: url(&quot;{% static 'sub_website/acceuil/assets/img/colette-6.jpg'%}&quot;); background-repeat:round;"></div>
             <!-- End: Image -->
 <form class="border rounded shadow-lg" method="POST">
 {% csrf_token %}
