--- a/sub_website/templates/sub_website/acceuil/index.html
+++ b/sub_website/templates/sub_website/acceuil/index.html
@@ -20,7 +20,7 @@
             <div class="row" style="margin-top: 76px;">
                 <div class="col">
                     <form action="/submit" method="POST">
-                        <div class="form-row">
+                        <div class="form-row" style="justify-content: center;">
                             <div class="col-12 col-md-9 mb-2 mb-md-0">
                             {% csrf_token %}
                             <input class="form-control form-control form-control-lg" id="input_index" type="text" name="value" placeholder="un aliment, une marque.." >
@@ -30,6 +30,11 @@
                     </form>
                 </div>
             </div>
+            <div class="row" style="justify-content: center; padding-right:129px; margin-top:40px;">
+                <div class="col-md-3"><a href="{%url 'categories'%}" style="text-decoration: none;"><button class="btn btn-primary btn-block btn-lg" data-bs-hover-animate="pulse" name="categories" style="background-color: #345A61;">Par categories</button></a></div>
+                <div class="col-md-3"><a href="{%url 'by_favorites'%}" style="text-decoration: none;"><button class="btn btn-primary btn-block btn-lg" data-bs-hover-animate="pulse" name ="favorites" style="background-color: #345A61;">Produits favoris</button></a></div>
+            </div>   
+        </div>
         </div>
     </header>
     <section id="histoire" style="background-color: #E8A75D;">
