--- a/sub_website/templates/sub_website/acceuil/favorited.html
+++ b/sub_website/templates/sub_website/acceuil/favorited.html
@@ -54,7 +54,7 @@
         <div class="container my-auto" style="backdrop-filter: blur(0.5);">
             <div class="row">
                 <div class="col" id ="no_results">
-                    <h3 class="text-uppercase"><strong style="font-size: 43px;background-color: rgba(11,10,10,0.31);">Nous n'avons aucun produit correspondant à votre recherche.</strong></h3>
+                    <h3 class="text-uppercase"><strong style="font-size: 43px;background-color: rgba(11,10,10,0.31);">Personne n'a encore favorisé de produits.</strong></h3>
                 </div>
             </div>
         </div>
