--- a/sub_website/templates/sub_website/acceuil/results.html
+++ b/sub_website/templates/sub_website/acceuil/results.html
@@ -30,7 +30,7 @@
            {% endfor %}
     </div>
             {% if paginate %}
-            <div class="btn-toolbar" style="margin-left: 276px;">
+            <div class="btn-toolbar" style="justify-content:center;">
                 {% if results_db.has_previous %}
                         <a class="btn btn-primary"  href="?page=1" style="background-color: #345A61;margin-right: 21px;">Première page</a>
                         <a class="btn btn-primary"  href="?page={{ results_db.previous_page_number}}" style="background-color: #345A61;margin-right: 21px;">Précedent</a>
