using bs4 to get info on api subsitutate, added tests, number of favorites plus the grade

--- a/sub_website/templates/sub_website/acceuil/favorited.html
+++ b/sub_website/templates/sub_website/acceuil/favorited.html
@@ -20,7 +20,9 @@
                     <a href="/product/{{product.codebar}}">
                         <div class="card cards-shadown cards-hover">
                             <div class="card-header" style="background-image:url({{product.image}}); background-size:cover;background-position:center; background-repeat: no-repeat;">
-                                <span class="badge badge-primary border rounded-circle shadow-lg" style="font-size: 37px; position : absolute; top : -30px; right: -15px ; text-transform: uppercase;" >{{product.favorited}}</span>
+                                <span class="badge badge-primary border rounded-circle shadow-lg" style="font-size: 25px; position : absolute; top : -30px; right: 0px ; text-transform: uppercase;" >{{product.grade}}</span>
+                                <span class="badge badge-primary border rounded-circle shadow-lg" style="font-size: 25px; position : absolute; top : -30px; left: 0px ; text-transform: uppercase;" >{{product.favorited}}</span>
+
                             </div>
                             <div class="card-body">
                                 <p class="cardbody-sub-text">{{product.name}}<p>
